--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -55,3 +55,57 @@
   height: 30px;
   background-color: var(--color-grey);
 }
+
+.app_navbar-smallscreen {
+  display: none;
+}
+
+.app_navbar-smallscreen_overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background: var(--color-black);
+  transition: 0.5s ease;
+
+  flex-direction: column;
+  z-index: 5;
+}
+
+.app_navbar-smallscreen_overlay .overlay_close {
+  font-size: 27px;
+  color: var(--color-golden);
+  cursor: pointer;
+
+  position: absolute;
+  top: 20px;
+  right: 20px;
+}
+
+.app_navbar-smallscreen_links {
+  list-style: none;
+}
+
+.app_navbar-smallscreen_links li {
+  margin: 2rem;
+  cursor: pointer;
+  color: var(--color-golden);
+  font-size: 2rem;
+  text-align: center;
+  font-family: var(--font-base);
+}
+
+.app_navbar-smallscreen_links li:hover {
+  color: var(--color-white);
+}
+
+@media screen and (max-width: 1150px) {
+  .app_navbar-links {
+    display: none;
+  }
+
+  .app_navbar-smallscreen {
+    display: flex;
+  }
+}
