--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -99,6 +99,11 @@
 .app_navbar-smallscreen_links li:hover {
   color: var(--color-white);
 }
+@media screen and (max-width: 2000px) {
+  .app_navbar-logo {
+    width: 210px;
+  }
+}
 
 @media screen and (max-width: 1150px) {
   .app_navbar-links {
@@ -107,5 +112,18 @@
 
   .app_navbar-smallscreen {
     display: flex;
+  }
+}
+
+@media screen and (max-width: 650px) {
+  .app_navbar {
+    padding: 1rem;
+  }
+  .app_navbar-login {
+    display: none;
+  }
+
+  .app_navbar-logo img {
+    width: 110px;
   }
 }
