--- a/src/container/Header/Header.css
+++ b/src/container/Header/Header.css
@@ -1,3 +1,8 @@
-.app_wrapper_info{
-  
+.app_header {
+  background-color: var(--color-black);
+}
+
+.app_header-h1 {
+  font-family: var(--font-base);
+  color: var(--color-golden);
 }
