--- a/src/container/Header/Header.css
+++ b/src/container/Header/Header.css
@@ -5,9 +5,60 @@
 .app_header-h1 {
   font-family: var(--font-base);
   color: var(--color-golden);
-  background-color: red;
+
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+  line-height: 117px;
+  font-size: 90px;
 }
 
-.app_wrapper_img {
-  color: white;
+.app_wrapper_img img {
+  width: 80%;
+}
+
+@media screen and (min-width: 2000px) {
+  .app_header-h1 {
+    font-size: 180px;
+    line-height: 210px;
+  }
+}
+
+@media screen and (max-width: 1150px) {
+  .app_header-h1 {
+    font-size: 90px;
+  }
+  .app_wrapper_info {
+    margin-bottom: 50px;
+  }
+  .app_wrapper_img img {
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 650px) {
+  .app_header-h1 {
+    font-size: 70px;
+    line-height: 87px;
+  }
+
+  .app_wrapper_info {
+    margin-bottom: 50px;
+  }
+  .app_wrapper_img img {
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 450px) {
+  .app_header-h1 {
+    font-size: 50px;
+    line-height: 70px;
+  }
+
+  .app_wrapper_info {
+    margin-bottom: 30px;
+  }
+  .app_wrapper_img img {
+    width: 100%;
+  }
 }
